# DSAPractice

./: .gitignore
DesignPatterns/: Decorator.cpp  HashMap.cpp  MultiTierCache.cpp  Proxy.cpp  Singleton.cpp  UniquePtr.cpp  adapter.cpp  builder.cpp  deadlock.cpp  extinsible_factory.cpp  facade.cpp  factory.cpp  prototype.cpp  race_cond.cpp  singleton_threadsafe.cpp
DesignPatterns/Pimpl Idiom/TCP Client Server/: CMakeLists.txt  client.h  clientImpl.cpp  network_exceptions.h  server.h  serverImpl.cpp  testServer.cpp  testclient.cpp
DesignPatterns/Stratergy/TextEncryptionTool/: CMakeLists.txt  enc_strategy.cpp
Go/: Goroutines_Channels.md  arrays.go  bounded_blocking_queue.go  c++_vs_go.md  closures.go  fan_out_in_mat_mul.go  generic.go  generic2.go  go_concurrency.go  go_routines.go  interface.go  interface_2.go  map.go  queue.go  queue_generic.go  receiver.go  recurssion.go  slice.go  smaple.go  stack_generic.go  strings_rune.go  structs.go  student_management.go  unsafe_interface.go  variables.go  variadic_fun.go
Threads/: aquire_release_sem.cpp  atomic.cpp  bounded_queue.cpp  class_thread.cpp  fan_out_in.cpp  lock_free_queue.cpp  lock_free_stack.cpp  lock_free_stack2.cpp  mutex.cpp  odd_even.cpp  producer_consumer.cpp  spin_lock.cpp  sum_.cpp  thread_2.cpp  thread_safe_queue.cpp  threads_1.cpp
adv_c++/: DependencyInjection.cpp  algo.cpp  deep_copy.cpp  dependency_inversion.cpp  enable_shared.cpp  forward.cpp  fun_obj_1.cpp  fun_obj_2.cpp  move_copy.cpp  push_vs_emplace.cpp  raw_smart_ptr.cpp  ref_wrapper.cpp  rnvo.cpp  rule_of_5.cpp  shallow_copy.cpp  shared_ptr.cpp  unique_ptr.cpp  virtual_des.cpp
top k-elements/: k_frequent_words.cpp  k_most_frequent.cpp  k_th_largest.cpp  kth_largest.cpp  reorg_string.cpp  (+1 more)
(+389 files in other folders)
